--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   intl: ^0.18.0
   places_service: ^0.1.3
+  flutter_credit_card: ^3.0.6
 
 flutter_icons:
   android: true
