--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   intl: ^0.18.0
   places_service: ^0.1.3
   flutter_credit_card: ^3.0.6
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.2.2
+
 
 flutter_icons:
   android: true
