--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_credit_card: ^3.0.6
   firebase_core: ^2.10.0
   firebase_auth: ^4.2.2
+  font_awesome_flutter: ^10.4.0
 
 
 flutter_icons:
@@ -85,6 +86,24 @@ flutter:
     - assets/popularCar/hyundaiCreta.png
     - assets/popularCar/suzukiGrant.png
     - assets/popularCar/tataZest.png
+    - assets/Cars/Economy/
+    - assets/Cars/Economy/2022 Hyundai Nios.jpg
+    - assets/Cars/Economy/2021 Swift Dzire.jpg
+    - assets/Cars/Economy/2019 Suzuki Ertiga.jpg
+    - assets/Cars/Economy/2020 Tata Tiago.jpg
+    - assets/Cars/preminium/2022 BMW 320D.jpg
+    - assets/Cars/preminium/2020 Toyota Innova.jpg
+    - assets/Cars/preminium/2021 Mercedes C-class.jpg
+    - assets/Cars/preminium/2022 Toyota Fortuner.jpg
+    - assets/Cars/luxury/2020 Bentley Flying Spur.jpg
+    - assets/Cars/luxury/2021 Mercedes S-Class.jpg
+    - assets/Cars/luxury/2022 Rollce Royce Phantom.jpg
+    - assets/Cars/luxury/2023 Land Rover Vogue.jpg
+    - assets/ourTeam/ayush.jpeg
+    - assets/ourTeam/mrinmoy.jpeg
+    - assets/ourTeam/nikhil.jpg
+    - assets/ourTeam/rishit.jpeg
+    - assets/ourTeam/sujal.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
